// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/AspectRatio handles 0 value 1`] = `null`;

exports[`Styles/AspectRatio handles positive value 1`] = `
{
  "classNames": "root",
  "variables": {
    "--uic-ratio-s": 0.5,
  },
}
`;

exports[`Styles/AspectRatio handles responsive value 1`] = `
{
  "classNames": "root",
  "variables": {
    "--uic-ratio-l": 2,
    "--uic-ratio-m": 0,
    "--uic-ratio-s": 4,
  },
}
`;

exports[`Styles/AspectRatio handles undefined value 1`] = `null`;
